[metadata]
long_description = file: README.rst, CHANGES.rst
keywords = jtypes, jt, jpype, jep, pyjnius, jpy, javabridge, pyjava, jcc,
           py4j, jython, java, pythonjava
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Natural Language :: Polish
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: Stackless
    Programming Language :: Python :: Implementation :: IronPython
    Programming Language :: Java
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Java Libraries

[options]
python_requires = >=2.7.0,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
setup_requires =
    setuptools>=39.2.0
install_requires =
    setuptools>=39.2.0
    jtypes.jvm
    jtypes.jtypes
namespace_packages = jt
packages = find:
package_dir =
    = src
    # jt.jpype.tests = tests
zip_safe = True

[options.packages.find]
where = src

[options.extras_require]
doc =
    Sphinx>=1.7.8
test =
    unittest2;python_version<'3.0'
    mock>=2.0.0
    numpy

[sdist]
formats = zip

[bdist_wheel]
universal = True

[build_sphinx]
source-dir = docs
build-dir = docs/_build
builder = html
all_files = True
warning-is-error = True
